--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Build and Run Docker Image
       run: |
-        cd starter/frontend
+        cd starter/frontend && npm run test
         docker build --build-arg=REACT_APP_MOVIE_API_URL=http://localhost:5000 --tag=mp-frontend:latest .
         docker run --name mp-frontend -p 3000:3000 -d mp-frontend
 
